# byteORM

./: .gitignore  Cargo.toml  LICENSE  install.ps1  install.sh  readme.md
.github/workflows/: intellij-plugin.yml
byteorm/: Cargo.toml  build.rs
byteorm-macros/: Cargo.toml
byteorm-macros/src/: lib.rs  parse.rs  types.rs
byteorm-macros/src/codegen/: client.rs  create.rs  delete.rs  jsonb.rs  mod.rs  model.rs  query.rs  update.rs  upsert.rs  utils.rs
byteorm/src/: ast.rs  grammar.pest  lib.rs  main.rs  parser.rs  rustgen.rs  studio.rs  studio_tests.rs  test_on_delete_bin.rs
byteorm/src/rustgen/: client.rs  create.rs  debug.rs  delete.rs  jsonb.rs  mod.rs  model.rs  query.rs  update.rs  upsert.rs  utils.rs
docs/: SYNTAX.md
examples/: .env  schema.bo
examples/blog/: Cargo.toml  schema.bo
examples/blog/src/: main.rs
integrations/: README.md
integrations/intellij/byteorm-intellij/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
integrations/intellij/byteorm-intellij/src/main/kotlin/dev/bytemate/byteorm/intellij/: ByteormAnnotator.kt  ByteormCompletionContributor.kt  ByteormEnterHandler.kt  ByteormFile.kt  ByteormFileElementType.kt  ByteormFileIconProvider.kt  ByteormFileType.kt  ByteormLanguage.kt  ByteormLexer.kt  ByteormParser.kt  ByteormParserDefinition.kt  ByteormSchemaParser.kt  ByteormSchemaSymbols.kt  ByteormSpellcheckingStrategy.kt  ByteormSyntaxHighlighter.kt  ByteormSyntaxHighlighterFactory.kt  ByteormTokenTypes.kt
