[workspace]
members = [
    "byteorm",
]
exclude = [
    "examples/generated",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["meetzli"]
repository = "https://github.com/bytematebot/byteORM"

[workspace.dependencies]
pest = "2.8.3"
pest_derive = "2.8.3"
tokio = { version = "1.48.0", features = ["full"]}
tokio-postgres = { version = "0.7.15", features = ["with-serde_json-1", "with-chrono-0_4"] }
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"