[package]
name = "byteorm"
version = "0.1.2"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "A lightweight ORM for Rust"

[lib]
name = "byteorm_lib"
path = "src/lib.rs"

[[bin]]
name = "byteorm"
path = "src/main.rs"


[dependencies]
pest.workspace = true
pest_derive.workspace = true
serde.workspace = true
clap = { version = "4.5.50", features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
quote = "1.0.41"
proc-macro2 = "1.0.103"
syn = "2.0.108"
prettyplease = "0.2.37"
dotenvy = "0.15.7"